--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grunt-gui",
 	"description": "Collection of tasks specific to Guardian Interactive",
-	"version": "0.1.0",
+	"version": "0.1.1",
 	"homepage": "",
 	"author": {
 		"name": "Guardian Interactive team",
@@ -34,7 +34,8 @@
 		"mime": "~1.2.9",
 		"prompt": "~0.2.9",
 		"grunt-shell": "~0.2.1",
-		"extend": "~1.1.3"
+		"extend": "~1.1.3",
+		"connect": "~2.0.0"
 	},
 	"keywords": [
 		"gruntplugin"
